remove references to jdk.incubator.foreign